# bevy-chess

./: Cargo.toml  README.md  TODO.md
assets/meshes/: chess pieces.glb  chessboard.glb  floor.glb
assets/meshes/pieces/: bishop.glb  king.glb  knight.glb  pawn.glb  queen.glb  rook.glb
benches/: bench_main.rs
src/: board.rs  easing.rs  lib.rs  main.rs  model.rs  moves_calculator.rs  orbit_camera.rs  pieces.rs  ui.rs
src/model/tests/: board_tests.rs  piece_tests.rs
src/systems/: chess.rs  game_set_up.rs  orbit_camera.rs
src/systems/chess/: game_set_up.rs
src/systems/chess/tests/: checking_for_check_tests.rs  piece_movement_tests.rs  special_move_tests.rs
src/tests/: mod.rs
