[package]
name = "bevy_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench_main"
harness = false

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }

[dependencies]
bevy = "0.6.0"
bevy_mod_picking = "0.5.4"